--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
-  "name": "@coreui/coreui-free-angular-admin-template",
+  "name": "Angular Template",
   "version": "2.0.0-rc.4",
-  "description": "CoreUI Free Angular 2+ Admin Template",
+  "description": "Angular Template - based on CoreUI",
   "author": {
-    "name": "Łukasz Holeczek",
-    "url": "http://holeczek.pl",
-    "github": "https://github.com/mrholek",
-    "twitter": "https://twitter.com/lukaszholeczek"
+    "name": "",
+    "url": "",
+    "github": ""
   },
-  "contributors": [
-    {
-      "name": "Andrzej Kopański",
-      "url": "https://github.com/xidedix"
-    }
-  ],
-  "homepage": "https://coreui.io/angular",
-  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
+  "contributors": [],
+  "homepage": "",
+  "copyright": "",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
