Removed components redundant in basic

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Angular Template",
+  "name": "angulartpl",
   "version": "2.0.0-rc.4",
   "description": "Angular Template - based on CoreUI",
   "author": {
